--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "dependencies": {
     "axios": "^0.20.0",
     "cheerio": "^1.0.0-rc.3",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "form-data": "^3.0.0",
+    "got": "^11.5.2",
+    "node-fetch": "^2.6.0",
+    "request": "^2.88.2"
   }
 }
